auto-test/tests/chapter_18/invalid_parse/extra_credit/union_var_tag_paren.c
struct s {
    int y;
};

int main(void) {
    
    union(s) var;

    return 0;
}